<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivitiesClass.Registration.RegisterUser"
    android:paddingTop="5sp"
    android:paddingBottom="5sp"
    android:paddingLeft="5sp"
    android:paddingRight="5sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="5sp"
            android:paddingBottom="5sp"
            android:paddingLeft="5sp"
            android:paddingRight="5sp">


            <TextView
                android:text="@string/addUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/addUserTitle"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textColor="#003a4d"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:id="@+id/layoutTop">
                <TextView
                    android:id="@+id/firstNameTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/first_name"
                    android:layout_weight="1"/>
                <EditText
                    android:id="@+id/firstNameET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.80"
                    android:inputType="text" >
                    <requestFocus />
                </EditText>
                <TextView
                    android:id="@+id/lastNameTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/last_name"
                    android:textSize="13sp"
                    android:layout_weight="0.9"
                    android:layout_marginEnd="5sp"
                    android:layout_marginRight="5sp"/>
                <EditText
                    android:id="@+id/lastNameET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:inputType="text" >

                </EditText>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:id="@+id/layoutTop2">
                <TextView
                    android:id="@+id/peselTV"
                    android:layout_width="match_parent"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/pesel"/>

                <EditText
                    android:id="@+id/peselET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:inputType="number" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/loginTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:text="@string/loginTV"/>

                <EditText
                    android:id="@+id/loginET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:inputType="text"
                    android:layout_weight="0.5"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/passwordTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/passwordYour"
                    android:layout_gravity="center"
                    android:layout_weight="1"/>
                <EditText
                    android:id="@+id/passwordET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:layout_weight="0.5"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                >
                <TextView
                    android:id="@+id/profilTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/profil"

                    android:layout_weight="1"/>
                <Spinner
                    android:id="@+id/profilSpin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"  />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/insuredTV"
                    android:layout_width="match_parent"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:text="@string/insured"
                    android:layout_weight="1"
                    android:textSize="11.5sp"/>
                <EditText
                    android:id="@+id/insuredET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:inputType="text" />
            </LinearLayout>

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="runInsertUser"

                android:text="@string/saveUser"
                android:background="@drawable/button_shape"
                android:textAllCaps="false"
                android:textSize="15sp"
                android:layout_marginBottom="3sp"
                android:layout_marginTop="20sp"
                android:layout_marginRight="3sp"
                android:layout_marginLeft="3sp"/>
        </LinearLayout>
</ScrollView>
